# django-editorjs

./: .gitignore  Makefile  README.md  poetry.toml  pyproject.toml
demo/: db.sqlite3
demo/demo/: settings.py  urls.py
demo/posts/: admin.py  models.py
demo/posts/migrations/: 0001_initial.py
django_editorjs/: __init__.py  app_settings.py  fields.py  file_saver.py  image_saver.py  settings.py  urls.py  views.py  widgets.py
django_editorjs/static/: django-editorjs.css  django-editorjs.js
django_editorjs/templates/: editorjs.html
